--- a/app/css/index.css
+++ b/app/css/index.css
@@ -1,18 +1,43 @@
-.body {
+body {
     padding: 0;
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
 }
 
 .contact-block {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 38px;
 }
 
-.contact-block .contact-block__time ul{
+.contact-block .contact-block__time ul {
     padding: 0;
     margin: 0;
     list-style: none;
     display: flex;
+    align-items: center;
+}
+.contact-block .contact-block__time ul li {
+    margin-right: 35px;
+}
+.contact-block .contact-block__time ul li:first-child {
+    text-decoration: underline;
+    border-bottom: #1F2933;
+}
+.contact-block .contact-block__time ul li .call-link {
+    text-decoration: underline;
+    color: #9BBABD;
+    border-bottom: #9BBABD;
+}
+.contact-block .contact-block__time ul li a {
+    text-decoration: none;
+    color: #1F2933;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
 }
 
 .contact-block .contact-block__garant ul {
@@ -21,11 +46,24 @@
     list-style: none;
     display: flex;
 }
+.contact-block .contact-block__garant ul li:first-child {
+    margin-right: 23px;
+}
+.contact-block .contact-block__garant ul li a {
+    text-decoration: none;
+    color: #1F2933;
+    font-family: 'Montserrat', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 21px;
+}
 
 .search-block {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 30px;
 }
 .search-block__logo {}
 .search-block__input input {
@@ -35,6 +73,10 @@
     border-radius: 5px;
     background-color: #ffffff;
     border: 1px solid #CBD2D9;
+    font-family: 'Montserrat', sans-serif;
+}
+.search-block__input input::placeholder {
+    font-family: 'Montserrat', sans-serif;
 }
 .search-block__social-icons ul {
     display: flex;
