--- a/app/css/index.sass
+++ b/app/css/index.sass
@@ -66,8 +66,7 @@ img
 
 
 @import 'blocks/_install'
-// @import 'blocks/_main'
-// @import 'blocks/_comments'
-// @import 'blocks/_media'
+@import 'blocks/_media'
+@import 'blocks/_catalog'
 
 
